--- a/index.html
+++ b/index.html
@@ -18,17 +18,14 @@
     <section class="daw"></section>
     <h3 class="tituloSeccion">Asignaturas DAW</h3>
       <div class="asignaturaUno card">
-        <a href="#">
-          <!--<div class="imgCard">
-            <img src="./img/img_card_daw.jpg" alt="DAW">
-          </div>-->
+        <a href="./daw/sistemas/sistemInfor.html">
           <div class="descripcionCard">
-            <h3>Sistemas Informáticos</h3>
+              <h3>Sistemas Informáticos</h3>
           </div>
         </a>
       </div>
       <div class="asignaturaDos card">
-        <a href="">
+        <a href="./daw/proUno/programUno.html">
           <div class="descripcionCard">
             <h3>Programación I</h3>
           </div>
@@ -112,7 +109,7 @@
         </a>
       </div>
     <!---------------------------------->
-    <h3 class="tituloSeccion">Apuntes</h3>
+    <h3 class="tituloSeccion">devAcademy</h3>
     <!---------------------------------->
     <h3 class="tituloSeccion">Proyectos</h3>
     
