--- a/daw/sistemas/temaCuatro.html
+++ b/daw/sistemas/temaCuatro.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../apuntesdaw.css">
+  <link rel="stylesheet" href="../../css/apuntesdaw.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
@@ -15,7 +15,8 @@
     <h1>Apuntes</h1>
     <h2>Sistemas Informáticos</h2>
     <div class="menuPrincipalAsignatura">
-      <a href="./sistemInfor.html">Principal</a>
+      <a href="../../index.html">Principal</a>
+      <a href="./sistemInfor.html">Tema 1</a>
       <a href="./temaDos.html">Tema 2</a>
       <a href="./temaTres.html">Tema 3</a>
       <a href="./temaCuatro.html">Tema 4</a>
