actualizacion del estilo

--- a/daw/proUno/proCinco.html
+++ b/daw/proUno/proCinco.html
@@ -12,23 +12,28 @@
 </head>
 <body>
   <header>
-    <h1>Apuntes</h1>
-    <h2>Programación I</h2>
+    <a name="top"></a>
+    <div class="navtop">
+      <span>Apuntes</span>
+      <span>Programación I</span>
+      <span>Principal</span>
+    </div>
     <div class="menuPrincipalAsignatura">
-      <a href="../../index.html">Principal</a>
       <a href="./programUno.html">Tema 1</a>
       <a href="./proDos.html">Tema 2</a>
       <a href="./proTres.html">Tema 3</a>
       <a href="./proCuatro.html">Tema 4</a>
       <a href="./proCinco.html">Tema 5</a>
     </div>
+    <div class="tituloTema">
+      <h1>Tema 5.- Gestión de ficheros</h1>
+    </div>
   </header>
   <!--*************************************************************--> 
   <section>
     <div class="indice">
-      <a name="indice"><h3>Índice</h3></a>
+      <h3>Índice</h3>
       <ol>
-        <h3>Tema 5.- Gestión de ficheros</h3>
         <li><a href="#5.1">Concepto y tipos de ficheros</a></li>
         <li><a href="#5.2">Diseño y modulación de las operaciones sobre ficheros</a></li>
         <li><a href="#5.3">Operaciones sobre ficheros secuenciales</a></li>
@@ -41,31 +46,31 @@
     <a name="5.0"></a>
     <article>
       <h3>Tema 5.- Gestión de ficheros</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="5.1"></a>
     <article>
       <h3>Concepto y tipos de ficheros</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="5.2"></a>
     <article>
       <h3>Diseño y modulación de las operaciones sobre ficheros</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="5.3"></a>
     <article>
       <h3>Operaciones sobre ficheros secuenciales</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="5.4"></a>
     <article>
       <h3>Control de excepciones</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
   </section>
