--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -12,23 +12,28 @@
 </head>
 <body>
   <header>
-    <h1>Apuntes</h1>
-    <h2>Programación I</h2>
+    <a name="top"></a>
+    <div class="navtop">
+      <span>Apuntes</span>
+      <span>Programación I</span>
+      <span>Principal</span>
+    </div>
     <div class="menuPrincipalAsignatura">
-      <a href="../../index.html">Principal</a>
       <a href="./programUno.html">Tema 1</a>
       <a href="./proDos.html">Tema 2</a>
       <a href="./proTres.html">Tema 3</a>
       <a href="./proCuatro.html">Tema 4</a>
       <a href="./proCinco.html">Tema 5</a>
     </div>
+    <div class="tituloTema">
+      <h1>Tema 3.- Programación Estructurada</h1>
+    </div>
   </header>
   <!--*************************************************************--> 
   <section>
     <div class="indice">
-      <a name="indice"><h3>Índice</h3></a>
+      <h3>Índice</h3>
       <ol>
-        <h3>Tema 3.- Programación Estructurada</h3>
         <li><a href="#3.1">Fundamentos de programación</a></li>
         <li><a href="#3.2">Introducción a la algoritmia y herramientas de diseño</a></li>
         <li><a href="#3.3">Ciclo de vida de un proyecto software</a></li>
@@ -49,79 +54,79 @@
     <a name="3.0"></a>
     <article>
       <h3>Tema 3.- Programación estructurada</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.1"></a>
     <article>
       <h3>Fundamentos de programación</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.2"></a>
     <article>
       <h3>Introducción a la algoritmia y herramientas de diseño</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.3"></a>
     <article>
       <h3>Ciclo de vida de un proyecto software</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.4"></a>
     <article>
       <h3>Prueba de programas</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.5"></a>
     <article>
       <h3>Tipos de datos: simples y compuestos</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.6"></a>
     <article>
       <h3>Estructuras de selección (Condicionales)</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.7"></a>
     <article>
       <h3>Estructuras de repetición</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.8"></a>
     <article>
       <h3>Estructuras de salto</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.9"></a>
     <article>
       <h3>Tratamiento de cadenas</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.10"></a>
     <article>
       <h3>Depuración de errores</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.11"></a>
     <article>
       <h3>Documentación de programas</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="3.12"></a>
     <article>
       <h3>Entornos de desarrollo de programas</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
 </body>
