--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -12,23 +12,28 @@
 </head>
 <body>
   <header>
-    <h1>Apuntes</h1>
-    <h2>Programación I</h2>
+    <a name="top"></a>
+    <div class="navtop">
+      <span>Apuntes</span>
+      <span>Programación I</span>
+      <span>Principal</span>
+    </div>
     <div class="menuPrincipalAsignatura">
-      <a href="../../index.html">Principal</a>
       <a href="./programUno.html">Tema 1</a>
       <a href="./proDos.html">Tema 2</a>
       <a href="./proTres.html">Tema 3</a>
       <a href="./proCuatro.html">Tema 4</a>
       <a href="./proCinco.html">Tema 5</a>
     </div>
+    <div class="tituloTema">
+      <h1>Tema 1.- Introducción a la programación</h1>
+    </div>
   </header>
   <!--*************************************************************--> 
   <section>
     <div class="indice">
-      <a name="indice"><h3>Índice</h3></a>
+      <h3>Índice</h3>
       <ol>
-        <h3>Tema 1.- Introducción a la programación</h3>
         <li><a href="#1.1">Representaciones gráficas</a></li>
         <li><a href="#1.2">Características de los diagramas de flujo</a></li>
         <li><a href="#1.3">Características del pseudocódigo</a></li>
@@ -42,7 +47,7 @@
   <!--*************************************************************-->
   <section>
     <article>
-      <h3>Tema 1.- Introducción a la programación</h3>
+      <h3>Introducción</h3>
       <p>
         Un programa es un conjunto de instrucciones dadas al ordenador
         en un lenguaje que solo es entendible por él para
@@ -74,7 +79,7 @@
             y estará compuesto de subprogramas que permitirán la 
             reutilización de código.</li>
         </ul>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="1.1"></a>
@@ -97,7 +102,7 @@
             del diagrama.</li>
           <li>Flechas: para indicar la dirección de flujo.</li>
         </ul>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="1.2"></a>
@@ -111,7 +116,7 @@
         <li>Todos los símbolos de decisión deben tener más de una línea de salida, deben indicar qué camino seguir en función de la decisión tomada.</li>
       </ul>
       <p>La otra herramienta para representar algoritmos es el pseudocódigo, que es la manera de representar distintas sentencias que va a realizar nuestro algoritomo. Este no se puede ejecutar en una máquina.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="1.3"></a>
@@ -124,7 +129,7 @@
         <li>Es recomendable la indentación, aunque no necesaria.</li>
         <li>No se diferencia entre mayúsculas y minúsculas.</li>
       </ul>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="1.4"></a>
@@ -138,7 +143,7 @@
       </ul>
       <p>Para solventar el problema de la comunicación tenemos lenguajes de tres tipos, alto nivel, nivel medio y bajo nivel. Los de alto nivel están más cerca del usuario, por el contrario los de bajo nivel se acercan más al lenguaje máquina.</p>
       <p>Implementararemos código con lenguajes de alto nivel para el cual necesitaremos traducción para convertir dicho programa en lenguaje máquina.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="1.5"></a>
@@ -150,7 +155,7 @@
         <li>Modificaciones como actualizaciones son fáciles de realizar.</li>
         <li>Para la traducción necesitaremos un compilador y un enlazador con librerías del lenguaje elegido.</li>
       </ul>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="1.6"></a>
@@ -162,7 +167,7 @@
         <li>Es totalmente dependiente de la máquina.</li>
       </ul>
       <p>La estructura de un programa informático y sus elementos principales son las variables, las constantes y los distintos operadores.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="1.7"></a>
@@ -190,7 +195,7 @@
         <li>Compilado.</li>
         <li>Interpretado ya que el código máquina se puede ejecutar directamente siempre que la máquina disponga del intérprete y el sistema de ejecución en tiempo real.</li>
       </ul>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
 </body>
