--- a/daw/plantillaApuntes.html
+++ b/daw/plantillaApuntes.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <header>
+    <a name="top"></a>
     <div class="navtop">
       <span>Apuntes</span>
       <span>NombreAsignatura</span>
@@ -31,7 +32,7 @@
   <!--*************************************************************--> 
   <section>
     <div class="indice">
-      <a name="indice"><h3>Índice</h3></a>
+      <h3>Índice</h3></a>
       <ol>
         <li><a href="#1.1">Apartado</a></li>
         <li><a href="#1.2">Apartado</a></li>
@@ -56,7 +57,7 @@
           <li>Elemento</li>
           <li>Elemento</li>
         </ul>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
 </body>
