--- a/daw/proUno/proCuatro.html
+++ b/daw/proUno/proCuatro.html
@@ -12,23 +12,28 @@
 </head>
 <body>
   <header>
-    <h1>Apuntes</h1>
-    <h2>Programación I</h2>
+    <a name="top"></a>
+    <div class="navtop">
+      <span>Apuntes</span>
+      <span>Programación I</span>
+      <span>Principal</span>
+    </div>
     <div class="menuPrincipalAsignatura">
-      <a href="../../index.html">Principal</a>
       <a href="./programUno.html">Tema 1</a>
       <a href="./proDos.html">Tema 2</a>
       <a href="./proTres.html">Tema 3</a>
       <a href="./proCuatro.html">Tema 4</a>
       <a href="./proCinco.html">Tema 5</a>
     </div>
+    <div class="tituloTema">
+      <h1>Tema 4.- Programación Modular</h1>
+    </div>
   </header>
   <!--*************************************************************--> 
   <section>
     <div class="indice">
-      <a name="indice"><h3>Índice</h3></a>
+      <h3>Índice</h3>
       <ol>
-        <h3>Tema 4.- Programación Modular</h3>
         <li><a href="#4.1">Concepto</a></li>
         <li><a href="#4.2">Ventajas e inconvenientes</a></li>
         <li><a href="#4.3">Análisis descendente (top down)</a></li>
@@ -47,67 +52,67 @@
     <a name="4.0"></a>
     <article>
       <h3>Tema 4.- Programación modular</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.1"></a>
     <article>
       <h3>Concepto</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.2"></a>
     <article>
       <h3>Ventajas e inconvenientes</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.3"></a>
     <article>
       <h3>Análisis descendente (top down)</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.4"></a>
     <article>
       <h3>Modulación de programas. Subprogramas</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.5"></a>
     <article>
       <h3>Llamadas a funciones (métodos). Tipos y funcionamiento</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.6"></a>
     <article>
       <h3>Ámbito de las llamadas a funciones</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.7"></a>
     <article>
       <h3>Prueba, depuración y comentarios de programas</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.8"></a>
     <article>
       <h3>Concepto de librerías</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.9"></a>
     <article>
       <h3>Uso de librerías</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="4.10"></a>
     <article>
       <h3>Introducción al concepto de recursividad</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
 </body>
