--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -12,23 +12,28 @@
 </head>
 <body>
   <header>
-    <h1>Apuntes</h1>
-    <h2>Programación I</h2>
+    <a name="top"></a>
+    <div class="navtop">
+      <span>Apuntes</span>
+      <span>Programación I</span>
+      <span>Principal</span>
+    </div>
     <div class="menuPrincipalAsignatura">
-      <a href="../../index.html">Principal</a>
       <a href="./programUno.html">Tema 1</a>
       <a href="./proDos.html">Tema 2</a>
       <a href="./proTres.html">Tema 3</a>
       <a href="./proCuatro.html">Tema 4</a>
       <a href="./proCinco.html">Tema 5</a>
     </div>
+    <div class="tituloTema">
+      <h1>Tema 2.- Estructura de un programa informático</h1>
+    </div>
   </header>
   <!--*************************************************************--> 
   <section>
     <div class="indice">
-      <a name="indice"><h3>Índice</h3></a>
+      <h3>Índice</h3>
       <ol>
-        <h3>Tema 2.- Estructura de un programa informático</h3>
         <li><a href="#2.1">Bloques de un programa de código</a></li>
         <li><a href="#2.2">Variables. Usos y tipos</a></li>
         <li><a href="#2.3">Constantes y literales. Tipos y utilidades</a></li>
@@ -49,7 +54,7 @@
         <li><b>Depurador:</b> Localiza errores de código.</li>
         <li><b>Compilación del código fuente:</b> Un código binario entendible por la máquina.</li>
       </ul>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="2.1"></a>
@@ -69,7 +74,7 @@
       <p>Para la entrada de datos, utilizaremos el método <b>ReadLine()</b>. Este leerá el dato introducido por el usuario y devolverá un dato de tipo cadena (string).</p>
       <p>Otro método es <b>Read()</b>, que leerá el dato introducido y devolverá un dato tipo entero (int).</p>
       <p>También podemos utilizar <b>ReadKey(), aquí se obtiene el carácter presionado por el usuario y se muestra esta tecla por la pantalla.</b></p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="2.2"></a>
@@ -107,7 +112,7 @@
         <li><b>Variables globales:</b> aquellas declaradas <b>fuera</b> de un método o función. Podemos acceder a ellas desde cualquier punto del programa.</li>
       </ul>
       <p>No es buena prática utilizar variables globales. El problema es que se crean dependencias ocultas. Cuando la aplicación es grande, no se conoce los objetos que tiene ni sus relaciones.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="2.3"></a>
@@ -137,7 +142,7 @@
         <li>Tabulación horizontal: \t</li>
         <li>Tabulación vertical: \v</li>
       </ul>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="2.4"></a>
@@ -239,7 +244,7 @@
       <p>El operador <= devuelve true si el izquierdo es menor o igual que el derecho. >= devuelve true si el izquierdo es mayor o igual que el derecho.</p>
       <p>El operador de igualdad == devuelve true si sus operandos son iguales.</p>
       <p>El operador de desigualdad != devuelve true si sus operadores son distintos.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
     <a name="2.5"></a>
@@ -293,7 +298,7 @@
           <td>Convierte un valor en su representación de cadena.</td>
         </tr>
       </table>
-      <div class="btnArriba"><a href="#indice">Arriba</a></div>
+      <div class="btnArriba"><a href="#top">Arriba</a></div>
     </article>
     <!--*************************************************************-->
     <a name="2.6"></a>
@@ -305,7 +310,7 @@
         <li><b>Comentarios multiline o multilíneas:</b> Son comentarios de varias líneas, para una explicación más detallada. Debemos englobar el contenido entre los caracteres /* y */.</li>
       </ul>
       <p>El uso de comentarios es muy útil, se aconseja su uso para documentar correctamente el código.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
     <!--*************************************************************-->
   </section>
