fin cambio estilo

--- a/daw/plantillaApuntes.html
+++ b/daw/plantillaApuntes.html
@@ -16,7 +16,7 @@
     <div class="navtop">
       <span>Apuntes</span>
       <span>NombreAsignatura</span>
-      <span>Principal</span>
+      <span><a href="../../index.html">Principal</a></span>
     </div>
     <div class="menuPrincipalAsignatura">
       <a href="#">Tema 1</a>
