--- a/daw/sistemas/temaSeis.html
+++ b/daw/sistemas/temaSeis.html
@@ -12,10 +12,13 @@
 </head>
 <body>
   <header>
-    <h1>Apuntes</h1>
-    <h2>Sistemas Informáticos</h2>
+    <a name="top"></a>
+    <div class="navtop">
+      <span>Apuntes</span>
+      <span>Sistemas Informáticos</span>
+      <span><a href="../../index.html">Principal</a></span>
+    </div>
     <div class="menuPrincipalAsignatura">
-      <a href="../../index.html">Principal</a>
       <a href="./sistemInfor.html">Tema 1</a>
       <a href="./temaDos.html">Tema 2</a>
       <a href="./temaTres.html">Tema 3</a>
@@ -23,13 +26,15 @@
       <a href="./temaCinco.html">Tema 5</a>
       <a href="./temaSeis.html">Tema 6</a>
     </div>
+    <div class="tituloTema">
+      <h1>Tema 6.- Resolución de incidencias y asistencia técnica</h1>
+    </div>
   </header>
   <!--*************************************************************-->
   <section>
     <div class="indice">
-      <a name="indice"><h3>Índice</h3></a>
+      <h3>Índice</h3>
       <ol>
-        <h3>Tema 6.- Resolución de incidencias y asistencia técnica</h3>
         <li><a href="#6.1">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</a></li>
         <li><a href="#6.2">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</a></li>
         <li><a href="#6.3">Instalaciones desatendidas e implementación de archivos de respuesta</a></li>
@@ -48,37 +53,37 @@
   <a name="6.1"></a>
     <article>
       <h3>6.1.- Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.2"></a>
     <article>
       <h3>6.2.- Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.3"></a>
     <article>
       <h3>6.3.- Instalación desatendidas e implementación de archivos de respuesta</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.4"></a>
     <article>
       <h3>6.4.- Servidores de actualizaciones automáticas</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.5"></a>
     <article>
       <h3>6.5.- Partes de incidencias y protocolos de actuación</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.6"></a>
     <article>
       <h3>6.6.- Administración remota</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   </section>
