--- a/daw/sistemas/temaTres.html
+++ b/daw/sistemas/temaTres.html
@@ -12,10 +12,13 @@
 </head>
 <body>
   <header>
-    <h1>Apuntes</h1>
-    <h2>Sistemas Informáticos</h2>
+    <a name="top"></a>
+    <div class="navtop">
+      <span>Apuntes</span>
+      <span>Sistemas Informáticos</span>
+      <span><a href="../../index.html">Principal</a></span>
+    </div>
     <div class="menuPrincipalAsignatura">
-      <a href="../../index.html">Principal</a>
       <a href="./sistemInfor.html">Tema 1</a>
       <a href="./temaDos.html">Tema 2</a>
       <a href="./temaTres.html">Tema 3</a>
@@ -23,13 +26,15 @@
       <a href="./temaCinco.html">Tema 5</a>
       <a href="./temaSeis.html">Tema 6</a>
     </div>
+    <div class="tituloTema">
+      <h1>Tema 3.- Administración de la información</h1>
+    </div>
   </header>
   <!--*************************************************************-->
   <section>
     <div class="indice">
-      <a name="indice"><h3>Índice</h3></a>
+      <h3>Índice</h3>
       <ol>
-        <h3>Tema 3.- Administración de la información</h3>
         <li><a href="#3.1">Sistemas de archivos</a></li>
         <li><a href="#3.2">Tipos de sistemas de archivos</a></li>
         <li><a href="#3.3">Gestión de sistemas de archivos mediante comandos y entornos gráficos</a></li>
@@ -53,67 +58,67 @@
   <a name="3.1"></a>
     <article>
       <h3>3.1.- Sistema de archivos</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.2"></a>
     <article>
       <h3>3.2.- Tipos de sitemas de archivos</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.3"></a>
     <article>
       <h3>3.3.- Gestión de sitemas de archivos mediante comandos y entornos gráficos</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.4"></a>
     <article>
       <h3>3.4.- Gestión de enlaces</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.5"></a>
     <article>
       <h3>3.5.- Estructura de directorios de sistemas operativos libres y propietarios</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.6"></a>
     <article>
       <h3>3.6.- Búsqueda de información del sistema mediante comandos y herramientas gráficas</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.7"></a>
     <article>
       <h3>3.7.- Identificación del software instalado mediante comandos y herramientas gráficas</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.8"></a>
     <article>
       <h3>3.8.- Gestión de la información del sistema. Rendimiento. Estadística</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.9"></a>
     <article>
       <h3>3.9.- Montaje y desmontaje de dispositivos en sistemas operativos</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.10"></a>
     <article>
       <h3>3.10.- Automatización</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="3.11"></a>
     <article>
       <h3>3.11.- Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</h3>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
 </body>
