--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -16,7 +16,7 @@
     <div class="navtop">
       <span>Apuntes</span>
       <span>Programación I</span>
-      <span>Principal</span>
+      <span><a href="../../index.html">Principal</a></span>
     </div>
     <div class="menuPrincipalAsignatura">
       <a href="./programUno.html">Tema 1</a>
