--- a/daw/sistemas/sistemInfor.html
+++ b/daw/sistemas/sistemInfor.html
@@ -12,10 +12,13 @@
 </head>
 <body>
   <header>
-    <h1>Apuntes</h1>
-    <h2>Sistemas Informáticos</h2>
+    <a name="top"></a>
+    <div class="navtop">
+      <span>Apuntes</span>
+      <span>Sistemas Informáticos</span>
+      <span><a href="../../index.html">Principal</a></span>
+    </div>
     <div class="menuPrincipalAsignatura">
-      <a href="../../index.html">Principal</a>
       <a href="./sistemInfor.html">Tema 1</a>
       <a href="./temaDos.html">Tema 2</a>
       <a href="./temaTres.html">Tema 3</a>
@@ -23,13 +26,15 @@
       <a href="./temaCinco.html">Tema 5</a>
       <a href="./temaSeis.html">Tema 6</a>
     </div>
+    <div class="tituloTema">
+      <h1>Tema 1.- Instalación software libre y propietario</h1>
+    </div>
   </header>
   <!--*************************************************************-->
   <section>
     <div class="indice">
       <a name="indice"><h3>Índice</h3></a>
       <ol>
-        <h3>Tema 1.- Instalación software libre y propietario</h3>
         <li><a href="#1.1">Estructura y componentes de un sistema informático. Periféricos y adaptadores para la conexion de dispositivos</a></li>
         <li><a href="#1.2">Tipos y topologías de red</a></li>
         <li><a href="#1.3">Mapa físico y lógico de una red</a></li>
@@ -53,7 +58,6 @@
   <!--*************************************************************-->
   <section>
     <article>
-      <h3 class="tituloPrincipal">Tema 1.- Instalación software libre y propietario</h3>
       <h4>Introducción</h4>
         <ul>
           <li><b>Sistema Informático:</b> Es aquel que almacena y procesa información interrelacionando el hardware y software de un ordenador. </li>
@@ -117,7 +121,7 @@
     <article>
       <p>El sistema informático como equipo único o conjunto de equipos de red, la conectividad es un término clave. Referencia la capacidad de los equipos y dispositivos para conectarse entre sí.</p>
       <p>Todo sistema informático estará compuesto de hardware y software. En un sentido más amplio debemos añadir a los usuarios (Recursos humanos) y por supuesto, ls información.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.2"></a>
@@ -169,7 +173,7 @@
       <li>RJ-45: Se emplean cables ethernet de 8 pines.</li>
       <li>Red inalámbrica: Ha supuesto una revolución en este ámbito, permite habilitar redes sin necesidad de cablearlas físicamente.</li>
     </ol>
-    <a class="btnArriba" href="#indice">Arriba</a>
+    <a class="btnArriba" href="#top">Arriba</a>
   </article>
   <!--*************************************************************-->
   <a name="1.3"></a>
@@ -180,7 +184,7 @@
       <p>Es una representación gráfica de una red en el mundo real. Todo deberá tenerse en cuenta para garantizar que la señal llegue a cada equipo de la mejor forma posible. Se realizan por aplicaciones que nos ofrecen subir los mapas como archivos en formatos para mostrar la representación y poder interacturar con los diferentes componentes o cosultar información de esta.</p>
       <h4>Mapa lógico</h4>
       <p>Documentación que hace referencia a los aspectos internos de la red. Es necesario saber que dirección ip tiene asignada cada ordenador, a que subred pertenece etc... Es una representación más técnica, que facilita el mantenimiento de la red, y la incorporación de nuevos nodos. Hay aplicaciones que nos ayudan a obtener la información necesaria de lso equipos, pero cuando se comprueba de forma masiva en redes muy grandes, se suele utilizar la consola de comandos.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.4"></a>
@@ -194,7 +198,7 @@
           <li><b>El sistema de archivos:</b> Con él obtenemos una estructura lógica de la información grabada en las unidades de disco y podemos trabajar con directorios y archivos. Es frecuente que forme parte del kernel o núcleo.</li>
           <li><b>Controladores o drivers:</b> Permite que el sistema interactue con los dispositivos hardware del equipo. <br> La gestión se lleva a cabo a partir de ordenes que recibe el sistema operativo. Para introducirlas podemos usar la interfaz gráfica o la consola.</li>
         </ul>
-        <a class="btnArriba" href="#indice">Arriba</a>
+        <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.5"></a>
@@ -215,7 +219,7 @@
         <li>Gestión de usuarios y permisos: Administra los permisos a los usuarios que les permiten acceder al sistema y así evitar acciones que afecten al trabajo de otro usuario.</li>
         <li>Control de seguridad: Para tener en cuenta la seguridad del software, usuarios y la información almacenada en el sistema.</li>
       </ul>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.6"></a>
@@ -247,7 +251,7 @@
           <li>Propietarios: Limitaciones de uso. Propiedad de alguna empresa.</li>
           <li>Libres: Permiten la modificación del producto. Usar el programa libremente.</li>
         </ul>
-        <a class="btnArriba" href="#indice">Arriba</a>
+        <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.7"></a>
@@ -258,7 +262,7 @@
         <li>Aplicaciones en red: Se ejecutan en un entorno de red local. Las aplicaciones primero se ejecutan de manera local y segundo de manera remota.</li>
         <li>Aplicaciones web o en la nube: La mayor parte se ejecuta en un servidor remoto y queda accesible a través de internet. A veces los datos también se almacenan online.</li>
       </ul>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.8"></a>
@@ -279,14 +283,14 @@
         <li>Retail: Suele tener un coste más elevado. Es posible reinstalarlo, cederlo a terceros o venderlo, ya que pasa a ser propiedad del usuario.</li>
         <li>Por volumen: Destinado a grandes usuarios (Empresas). Similar a OEM, pero sin afectar a nuevos equipos. Determina el número de equipos en los que se utilizará. El fabricante está autorizado para comprobarlo.</li>
       </ul>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.9"></a>
     <article>
       <h3>1.9.- Gestores de arranque</h3>
       <p>Los gestores de arranque son un pequeño programa que se ejecuta una vez iniciada la bios. Prepara los elementos más básicos para que el S.O. funcione.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.10"></a>
@@ -294,7 +298,7 @@
       <h3>1.10.- Maquinas virtuales</h3>
       <p>Son un software que nos permite instalar S.O. de forma que crea que está instalado en un equipo. Hay dos tipos diferentes, las de sistemas y las de proceso. Emulan un ordenador por completo y ejecutan un S.O. en su interior. <br>Utilizan el hardware instalado en el equipo base, todo funcionará como si de un pc normal se tratase.</p>
       <p>Las de proceso no emulan todo el equipo completo sino que ejecutan un proceso concreto como una aplicación. Son muy útiles para crear aplicaciones para varias plataformas, creando un entorno de ejecución para lidiar con el S.O. y no programar específicamente para un sistema.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.11"></a>
@@ -305,7 +309,7 @@
         <li>Medios para la instalación del S.O.: Periféricos para leer los ficheros de instalación.</li>
         <li>Undidad de destino: La partición o disco óptimo será la que disponga de mayor rápidez en la lectura/escritura de datos. Es importante planificar que el S.O. y los archivos se encuentren en diferentes particiones. La instalación del S.O. conllevará la destrucción de los datos de la partición elegida, antes será vital realizar una copia de seguridad.</li>
       </ul>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.12"></a>
@@ -328,7 +332,7 @@
         <li>Primarias: Pueden ser reconocidas como particiones de arranque. Un disco cuenta con una única partición primaria que abarca todo el espacio disponible, está limitado a cuatro.</li>
         <li>Extendidas o secundarias: Complemento o ampliación de las primarias que permiten definir más unidades lógicas. Se crearon para saltarse la limitación de cuatro particiones primarias por disco.</li>
       </ul>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.13"></a>
@@ -343,7 +347,7 @@
       <p>La instalación implica llevar a cabo las operaciones precisas para que se pueda ejecutar. Normalmente disponen de un asistente, se distribuyen en un paquete comprimido que bastará con descomprimir.</p>
       <p>La desinstalación es el proceso inverso y el S.O. brinda herramientas para ello.</p>
       <p>Debemos señalar que las sucesivas instalaciones y desinstalaciones van dejando restos en los ficheros de configuración. Estos restos pueden incidir negativamente en el rendimiento.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.14"></a>
@@ -354,7 +358,7 @@
         <li>Instalación en limpio: A veces debemos desinstalar la versión previa antes de instalar la nueva.</li>
       </ul>
       <p> En ocasiones su propia interfaz nos advertirá de actualizaciones disponibles. Los S.O. también advierten de actualizaciones disponibles, estas mejoraran y perfilarán funcionalidades y también redundarán en una mayor seguridad. En S.O. linux se pueden utilizar comandos o aplicaciones para comprobar las actualizaciones.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.15"></a>
@@ -366,14 +370,14 @@
         <li>Luego, carga el gestor de arranque y seguidamente el S.O. Aquí se ejecutan los archivos de inicio. Se ocupan de cargar en memoria los servicios o los programas residentes.</li>
       </ol>
       <p>Estos archivos pueden editarse con un editor de texto simple. En algunos casos contamos con software específico para operar cambios.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.16"></a>
     <article>
       <h3>1.16.- Registros del sistema</h3>
       <p>En determinados S.O. nos brinda un registro que centraliza la configuración, sus servicios y aplicaciones. El visor de eventos complementan la información del registro. Es preciso realizar mantenimiento y limpieza regular.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="1.17"></a>
@@ -385,7 +389,7 @@
         <li>Descarga online: Casi todos los fabricantes disponen de una web de donde descargar.</li>
       </ul>
       <p>Dada su importancia lo ideal es respaldarlos en un momento en el que todo funcione correctamente.</p>
-      <a class="btnArriba" href="#indice">Arriba</a>
+      <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
 </body>
